@@ -14,6 +14,7 @@ Norman-0.6.2
 -   Hooks added to `Table` to allow more control over validation.
 -   Add `Query.field`, allowing queries to traverse tables.
 -   Add `Query.add`, allowing records to be created based on query criteria.
+-   Add a return value when calling `Query` objects.
 -   `Field` level validation added, including some validator factories.
 -   Add built-in support for many-to-many joins.
 -   Add `validate.todatetime`, `validate.todate` and `validate.totime`.
